# mini-motorways

./: Cargo.toml
art/: experiment.aseprite  map.ldtk  palette test.ase  palette.aseprite  palette2.aseprite  sprite_sheet.aseprite
assets/textures/: sprite_sheet.ron
src/: main.rs
